chore(client): add document management features to the client side
[#145404165]

--- a/client/scss/common/_variables.scss
+++ b/client/scss/common/_variables.scss
@@ -1,16 +1,18 @@
 // === COLORS ===
 $text-color: #222;
 $body-color: #F6F4F1;
-$post-background: #7f8c8d;
-$primary-color: #34495e;
+$post-background: #D7CED7;
+$primary-color: #76323F;
 $primary-color-light: lighten($primary-color, 15%);
 $primary-color-dark: darken($primary-color, 15%);
-$secondary-color: #AF4329;
+$secondary-color: #565656;
+$tertialy-color: #26A69A;
+$white: #fff;
 
 
 // === FONTS ===
 $text-font: "Lato", Arial, sans-serif;
-$header-font: 'Courgette', Georgia, serif;
+$header-font: 'Montserrat', Georgia, serif;
 
 // === SIZES ===
 $text-size: 16px;
