--- a/client/scss/_extras.scss
+++ b/client/scss/_extras.scss
@@ -11,7 +11,12 @@
 h1, h2, h3 {
   font-family: $header-font;
 }
-
+select {
+  background: transparent;
+}
+strong {
+  font-weight: bold;
+}
 label {
   max-width: 100px;
 }
