--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -5,7 +5,7 @@
 @import 'common/mixins';
 @import 'common/variables';
 @include google-font('Lato');
-@include google-font('Courgette');
+@include google-font('Montserrat');
 
 * {
   margin: 0;
@@ -22,6 +22,13 @@ body {
   color: $text-color;
   font-family: $text-font;
   font-size: $text-size;
+}
+#app {
+  background-image: url('https://static.pexels.com/photos/161889/mill-car-flour-history-161889.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: fixed;
+  color: $white;
 }
 
 // HEADER
@@ -72,18 +79,25 @@ main {
   .documents-div,
   .document-div,
   .form-div {
-    padding: 50px 0px;
+    padding: 50px 0;
     min-height: 85vh;
+    background: rgba(0,0,0, 0.6);
   }
   .documents-div {
-    background-color: $body-color;
+    position: relative;
+
+    .edit-mode {
+      display: inline-block;
+      position: absolute;
+      top: 20px;
+      right: 30px;
+    }
   }
   .fixed-action-btn {
     bottom: 100px;
     i,
     ul {
-      background-color: $primary-color;
-      color: #fff;
+      color: $white;
       .input-field,
       label {
         color: #fff;
@@ -93,8 +107,9 @@ main {
   .documents {
     .card {
       position: relative;
-      background-color: $secondary-color;
+      background-color: $white;
       height: 250px;
+      color: $text-color;
       .view-document {
         display: block;
         height: 250px;
@@ -117,6 +132,17 @@ main {
       .card-content {
         max-height: 250px;
         overflow: auto;
+        color: $text-color;
+      }
+
+      .document-access {
+        position: absolute;
+        bottom: 5px;
+        right: 5px;
+        padding: 3px 10px;
+        background-color:  darken($white, 15%);
+        border-radius: 5px;
+        color: $text-color;
       }
     }
     .recent-documents {
@@ -124,15 +150,21 @@ main {
       font-size: 25px;
       margin: 0 0 10px 0;
     }
+    .pagination {
+      .waves-effect .material-icons {
+        color: $white;
+      }
+    }
   }
   .document-div {
-    background-color: $post-background;
     .document {
       background-color: #fff;
       padding: 30px 25px;
       font-size: 20px;
       letter-spacing: 0.8px;
       word-spacing: 2px;
+      color: $text-color;
+      border-radius: 10px;
       h1,
       h2,
       h3,
@@ -141,6 +173,8 @@ main {
       }
       .meta-info {
         margin-bottom: 20px;
+        font-size: 16px;
+        color: lighten($text-color, 15%);
       }
       img {
         max-width: 100%;
@@ -152,6 +186,20 @@ main {
     width: 89%;
     display: block;
     margin-left: 45px;
+  }
+
+  .search-form {
+    padding-left: 15px;
+
+    input {
+      background: rgba(0,0,0,0.6);
+      border-radius: 5px;
+      padding-left: 15px;
+    }
+
+    label {
+      margin-left: 15px;
+    }
   }
 }
 
