--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -24,7 +24,7 @@ body {
   font-size: $text-size;
 }
 #app {
-  // background-image: url('https://static.pexels.com/photos/161889/mill-car-flour-history-161889.jpeg');
+  background-image: url('http://i.imgur.com/cPfWKzY.jpg');
   background-color: $text-color;
   background-size: cover;
   background-repeat: no-repeat;
