feature(end-to-end test): setup end-to-end testing and add a hidden input for testing documents
[#145892003]

--- a/client/scss/_extras.scss
+++ b/client/scss/_extras.scss
@@ -38,6 +38,10 @@ label {
   margin-bottom: 30px;
 }
 
+#hiddenContentArea {
+  opacity: 0;
+}
+
 p, span, h1, h2, h3 {
   word-wrap: break-word;
 }
