feature(client): properly indent files and display correct error messages
[#145892003]

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -24,7 +24,7 @@ body {
   font-size: $text-size;
 }
 #app {
-  background-image: url('http://i.imgur.com/cPfWKzY.jpg');
+  background-image: url('../img/background.jpg');
   background-color: $text-color;
   background-size: cover;
   background-repeat: no-repeat;
