feature(client): update pagination feature and add e2e tests
[#146144825]

--- a/client/scss/_extras.scss
+++ b/client/scss/_extras.scss
@@ -49,3 +49,11 @@ p, span, h1, h2, h3 {
 .input-field label {
     top: 0.1rem;
 }
+
+.delete-btn {
+  background-color: $primary-color;
+  margin-left: 15px;
+  &:hover {
+    background-color: darken($primary-color, 15%);
+  }
+}
