--- a/client/scss/_content.scss
+++ b/client/scss/_content.scss
@@ -65,7 +65,7 @@ main {
       }
       .card-content {
         max-height: 250px;
-        overflow: auto;
+        overflow: hidden;
         color: $text-color;
       }
 
